added links to navigation

--- a/starter/index.html
+++ b/starter/index.html
@@ -14,6 +14,12 @@
   <header>
     <h1>Joshua Laforest</h1>
     <nav>
+      <ul>
+        <li>about me</li>
+        <li>work</li>
+        <li>contact me</li>
+        <li>resume</li>
+      </ul>
     </nav>
   </header>
 
