--- a/starter/index.html
+++ b/starter/index.html
@@ -34,6 +34,12 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <p>
+        You can do anything your heart can imagine. The only thing worse than yellow snow is green snow. From all of us here, I want to wish you happy painting and God bless, my friends. So often we avoid running water, and running water is a lot of fun. Let's do it again then, what the heck. Just use the old one inch brush.
+      </p>
+      <p>
+        If you didn't have baby clouds, you wouldn't have big clouds. Automatically, all of these beautiful, beautiful things will happen. It's amazing what you can do with a little love in your heart. We'll do another happy little painting. Don't forget to tell these special people in your life just how special they are to you. The little tiny Tim easels will let you down.
+      </p>
     </section>
 
     <!-- portfolio container -->
