added projects scaffolding to work section

--- a/starter/index.html
+++ b/starter/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Joshua Laforest</h1>
+    <h1 class="block-with-title">Joshua Laforest</h1>
     <nav>
       <ul>
         <li>about me</li>
@@ -26,7 +26,7 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>You'll never win, so always be yourself.</h2>
+      <h2 class="block-with-title">You'll never win, so always be yourself.</h2>
     </div>
   </section>
 
@@ -45,6 +45,38 @@
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
+      <div class="grid">
+        <div class="grid-item">
+          <header>
+            <h2 class="block-with-title">Jake's Eatery</h2>
+            <p>HTML/CSS</p>
+          </header>
+        </div>
+        <div class="grid-item">
+          <header>
+            <h2 class="block-with-title">CSS Snippet Cheatsheet</h2>
+            <p>HTML/CSS</p>
+          </header>
+        </div>
+        <div class="grid-item">
+          <header>
+            <h2 class="block-with-title">HTML Refactor</h2>
+            <p>HTML/CSS</p>
+          </header>
+        </div>
+        <div class="grid-item">
+          <header>
+            <h2 class="block-with-title">Something Cool</h2>
+            <p>HTML/CSS</p>
+          </header>
+        </div>
+        <div class="grid-item">
+          <header>
+            <h2 class="block-with-title">Something Something</h2>
+            <p>HTML/CSS</p>
+          </header>
+        </div>
+      </div>
     </section>
 
     <!-- contact -->
