added links to contact section

--- a/starter/index.html
+++ b/starter/index.html
@@ -82,6 +82,13 @@
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
+      <div>
+        <a href="">01347685943</a>
+        <a href="">example@example.com</a>
+        <a href="">Github</a>
+        <a href="">Twitter</a>
+        <a href="">Spotify</a>
+      </div>
     </section>
   </main>
 </body>
