--- a/starter/index.html
+++ b/starter/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- main logo / nav -->
-  <header>
+  <header class="navbar">
     <h1 class="block-with-title">Joshua Laforest</h1>
     <nav>
       <ul>
