styled nav links

--- a/starter/index.html
+++ b/starter/index.html
@@ -13,13 +13,11 @@
   <!-- main logo / nav -->
   <header class="navbar">
     <h1 class="block-with-title">Joshua Laforest</h1>
-    <nav>
-      <ul>
-        <li>about me</li>
-        <li>work</li>
-        <li>contact me</li>
-        <li>resume</li>
-      </ul>
+    <nav class="navMenu">
+        <a href="" class="navLink">about me</a>
+        <a href="" class="navLink">work</a>
+        <a href="" class="navLink">contact me</a>
+        <a href="" class="navLink">resume</a>
     </nav>
   </header>
 
