added content to hero section

--- a/starter/index.html
+++ b/starter/index.html
@@ -22,10 +22,20 @@
   </header>
 
   <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2 class="block-with-title">You'll never win, so always be yourself.</h2>
+  <section class="hero">
+    <div class="heroHeader">
+      <h1 class="heroTitle">Joshua Laforest</h1>
+      <p class="heroSubTitle">
+        Front-End Web Developer
+      </p>
     </div>
+    <div class="heroContent">
+      <p class="heroParagraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis nam placeat, accusantium reiciendis cumque totam iste quisquam fuga earum corporis ducimus tenetur culpa eaque doloribus illo a sed at?
+      </p>
+      <button>contact me</button>
+    </div>
+    <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg">
   </section>
 
   <main class="page-wrapper">
