--- a/starter/index.html
+++ b/starter/index.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Joshua Laforest // Web Developer</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Joshua Laforest // Web Developer</title>
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
-
-<body>
-  <!-- main logo / nav -->
-  <header class="navbar">
-    <h1 class="block-with-title">Joshua Laforest</h1>
-    <nav class="navMenu">
+  <body>
+    <!-- main logo / nav -->
+    <header class="navbar">
+      <h1 class="block-with-title">Joshua Laforest</h1>
+      <nav class="navMenu">
         <a href="" class="navLink">about me</a>
         <a href="" class="navLink">work</a>
         <a href="" class="navLink">contact me</a>
         <a href="" class="navLink">resume</a>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <!-- hero banner -->
-  <section class="hero">
-    <div class="heroHeader">
-      <h1 class="heroTitle">Joshua Laforest</h1>
-      <p class="heroSubTitle">
-        Front-End Web Developer
-      </p>
-    </div>
-    <div class="heroContent">
-      <p class="heroParagraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis nam placeat, accusantium reiciendis cumque totam iste quisquam fuga earum corporis ducimus tenetur culpa eaque doloribus illo a sed at?
-      </p>
-      <button>contact me</button>
-    </div>
-    <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg">
-  </section>
-
-  <main class="page-wrapper">
-    <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
-      <p>
-        You can do anything your heart can imagine. The only thing worse than yellow snow is green snow. From all of us here, I want to wish you happy painting and God bless, my friends. So often we avoid running water, and running water is a lot of fun. Let's do it again then, what the heck. Just use the old one inch brush.
-      </p>
-      <p>
-        If you didn't have baby clouds, you wouldn't have big clouds. Automatically, all of these beautiful, beautiful things will happen. It's amazing what you can do with a little love in your heart. We'll do another happy little painting. Don't forget to tell these special people in your life just how special they are to you. The little tiny Tim easels will let you down.
-      </p>
-    </section>
-
-    <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-      <div class="grid">
-        <div class="grid-item">
-          <header>
-            <h2 class="block-with-title">Jake's Eatery</h2>
-            <p>HTML/CSS</p>
-          </header>
-        </div>
-        <div class="grid-item">
-          <header>
-            <h2 class="block-with-title">CSS Snippet Cheatsheet</h2>
-            <p>HTML/CSS</p>
-          </header>
-        </div>
-        <div class="grid-item">
-          <header>
-            <h2 class="block-with-title">HTML Refactor</h2>
-            <p>HTML/CSS</p>
-          </header>
-        </div>
-        <div class="grid-item">
-          <header>
-            <h2 class="block-with-title">Something Cool</h2>
-            <p>HTML/CSS</p>
-          </header>
-        </div>
-        <div class="grid-item">
-          <header>
-            <h2 class="block-with-title">Something Something</h2>
-            <p>HTML/CSS</p>
-          </header>
-        </div>
-      </div>
-    </section>
-
-    <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+    <!-- hero banner -->
+    <section class="hero">
       <div>
-        <a href="">01347685943</a>
-        <a href="">example@example.com</a>
-        <a href="">Github</a>
-        <a href="">Twitter</a>
-        <a href="">Spotify</a>
+      <div class="heroHeader">
+        <h1 class="heroTitle">Joshua Laforest</h1>
+        <p class="heroSubTitle">Front-End Web Developer</p>
       </div>
+      <div class="heroContent">
+        <p class="heroParagraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          perferendis nam placeat, accusantium reiciendis cumque totam iste
+          quisquam fuga earum corporis ducimus tenetur culpa eaque doloribus
+          illo a sed at?
+        </p>
+        <button>contact me</button>
+      </div>
+    </div>
+    <div class="heroImgWrapper">
+      <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg" />
+    </div>
     </section>
-  </main>
-</body>
 
+    <main class="page-wrapper">
+      <!-- about me -->
+      <section class="page-section" id="about">
+        <h2>About Me</h2>
+        <p>
+          You can do anything your heart can imagine. The only thing worse than
+          yellow snow is green snow. From all of us here, I want to wish you
+          happy painting and God bless, my friends. So often we avoid running
+          water, and running water is a lot of fun. Let's do it again then, what
+          the heck. Just use the old one inch brush.
+        </p>
+        <p>
+          If you didn't have baby clouds, you wouldn't have big clouds.
+          Automatically, all of these beautiful, beautiful things will happen.
+          It's amazing what you can do with a little love in your heart. We'll
+          do another happy little painting. Don't forget to tell these special
+          people in your life just how special they are to you. The little tiny
+          Tim easels will let you down.
+        </p>
+      </section>
+
+      <!-- portfolio container -->
+      <section class="page-section" id="work">
+        <h2>Work</h2>
+        <div class="grid">
+          <div class="grid-item">
+            <header>
+              <h2 class="block-with-title">Jake's Eatery</h2>
+              <p>HTML/CSS</p>
+            </header>
+          </div>
+          <div class="grid-item">
+            <header>
+              <h2 class="block-with-title">CSS Snippet Cheatsheet</h2>
+              <p>HTML/CSS</p>
+            </header>
+          </div>
+          <div class="grid-item">
+            <header>
+              <h2 class="block-with-title">HTML Refactor</h2>
+              <p>HTML/CSS</p>
+            </header>
+          </div>
+          <div class="grid-item">
+            <header>
+              <h2 class="block-with-title">Something Cool</h2>
+              <p>HTML/CSS</p>
+            </header>
+          </div>
+          <div class="grid-item">
+            <header>
+              <h2 class="block-with-title">Something Something</h2>
+              <p>HTML/CSS</p>
+            </header>
+          </div>
+        </div>
+      </section>
+
+      <!-- contact -->
+      <section class="page-section contact" id="contact">
+        <h2>Contact Me</h2>
+        <div>
+          <a href="">01347685943</a>
+          <a href="">example@example.com</a>
+          <a href="">Github</a>
+          <a href="">Twitter</a>
+          <a href="">Spotify</a>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
