--- a/starter/index.html
+++ b/starter/index.html
@@ -10,8 +10,8 @@
 
   <body>
     <!-- main logo / nav -->
-    <header class="navbar">
-      <h1 class="block-with-title">Joshua Laforest</h1>
+    <header class="navbar container-lg">
+      <p class="brand">Joshua Laforest</p>
       <nav class="navMenu">
         <a href="" class="navLink">about me</a>
         <a href="" class="navLink">work</a>
@@ -21,7 +21,7 @@
     </header>
 
     <!-- hero banner -->
-    <section class="hero">
+    <section class="hero container">
       <div>
       <div class="heroHeader">
         <h1 class="heroTitle">Joshua Laforest</h1>
@@ -29,22 +29,17 @@
       </div>
       <div class="heroContent">
         <p class="heroParagraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-          perferendis nam placeat, accusantium reiciendis cumque totam iste
-          quisquam fuga earum corporis ducimus tenetur culpa eaque doloribus
-          illo a sed at?
+          We want to use a lot pressure while using no pressure at all. This is probably the greatest thing to happen in my life - to be able to share this with you. And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen.
         </p>
         <button>contact me</button>
       </div>
     </div>
-    <div class="heroImgWrapper">
       <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg" />
-    </div>
     </section>
 
     <main class="page-wrapper">
       <!-- about me -->
-      <section class="page-section" id="about">
+      <section class="page-section container-sml" id="about">
         <h2>About Me</h2>
         <p>
           You can do anything your heart can imagine. The only thing worse than
