--- a/starter/index.html
+++ b/starter/index.html
@@ -37,9 +37,10 @@
       <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg" />
     </section>
 
-    <main class="page-wrapper">
+    <main class="page-wrapper container-lg">
       <!-- about me -->
-      <section class="page-section container-sml" id="about">
+      <section class="about-section" id="about">
+        <div class="container-sml">
         <h2>About Me</h2>
         <p>
           You can do anything your heart can imagine. The only thing worse than
@@ -48,6 +49,7 @@
           water, and running water is a lot of fun. Let's do it again then, what
           the heck. Just use the old one inch brush.
         </p>
+        <br>
         <p>
           If you didn't have baby clouds, you wouldn't have big clouds.
           Automatically, all of these beautiful, beautiful things will happen.
@@ -56,6 +58,7 @@
           people in your life just how special they are to you. The little tiny
           Tim easels will let you down.
         </p>
+      </div>
       </section>
 
       <!-- portfolio container -->
@@ -64,31 +67,31 @@
         <div class="grid">
           <div class="grid-item">
             <header>
-              <h2 class="block-with-title">Jake's Eatery</h2>
+              <h3 class="block-with-title">Jake's Eatery</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
           <div class="grid-item">
             <header>
-              <h2 class="block-with-title">CSS Snippet Cheatsheet</h2>
+              <h3 class="block-with-title">CSS Snippet Cheatsheet</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
           <div class="grid-item">
             <header>
-              <h2 class="block-with-title">HTML Refactor</h2>
+              <h3 class="block-with-title">HTML Refactor</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
           <div class="grid-item">
             <header>
-              <h2 class="block-with-title">Something Cool</h2>
+              <h3 class="block-with-title">Something Cool</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
           <div class="grid-item">
             <header>
-              <h2 class="block-with-title">Something Something</h2>
+              <h3 class="block-with-title">Something Something</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
