changed href values for navigation links

--- a/starter/index.html
+++ b/starter/index.html
@@ -13,10 +13,9 @@
     <header class="navbar container-lg">
       <p class="brand">Joshua Laforest</p>
       <nav class="navMenu">
-        <a href="" class="navLink">about me</a>
-        <a href="" class="navLink">work</a>
-        <a href="" class="navLink">contact me</a>
-        <a href="" class="navLink">resume</a>
+        <a href="#about" class="navLink">about me</a>
+        <a href="#work" class="navLink">work</a>
+        <a href="#contact" class="navLink">contact me</a>
       </nav>
     </header>
 
