styling projects grid

--- a/starter/index.html
+++ b/starter/index.html
@@ -61,36 +61,36 @@
       </section>
 
       <!-- portfolio container -->
-      <section class="page-section" id="work">
+      <section class="page-section container-sml" id="work">
         <h2>Work</h2>
-        <div class="grid">
-          <div class="grid-item">
+        <div class="work-grid">
+          <div class="work-grid-item" id="projectOne">
             <header>
-              <h3 class="block-with-title">Jake's Eatery</h3>
+              <h3>Jake's Eatery</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
-          <div class="grid-item">
+          <div class="work-grid-item" id="projectTwo">
             <header>
-              <h3 class="block-with-title">CSS Snippet Cheatsheet</h3>
+              <h3>CSS Snippet Cheatsheet</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
-          <div class="grid-item">
+          <div class="work-grid-item" id="projectThree">
             <header>
-              <h3 class="block-with-title">HTML Refactor</h3>
+              <h3>HTML Refactor</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
-          <div class="grid-item">
+          <div class="work-grid-item" id="projectFour">
             <header>
-              <h3 class="block-with-title">Something Cool</h3>
+              <h3>Something Cool</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
-          <div class="grid-item">
+          <div class="work-grid-item" id="projectFive">
             <header>
-              <h3 class="block-with-title">Something Something</h3>
+              <h3>Something Something</h3>
               <p>HTML/CSS</p>
             </header>
           </div>
