--- a/starter/index.html
+++ b/starter/index.html
@@ -98,7 +98,7 @@
       </section>
 
       <!-- contact -->
-      <section class="page-section contact" id="contact">
+      <section class="page-section contact container" id="contact">
         <h2>Contact Me</h2>
         <div>
           <a href="">01347685943</a>
