setup links to deployed applications

--- a/starter/index.html
+++ b/starter/index.html
@@ -22,17 +22,21 @@
     <!-- hero banner -->
     <section class="hero container">
       <div>
-      <div class="heroHeader">
-        <h1 class="heroTitle">Joshua Laforest</h1>
-        <p class="heroSubTitle">Front-End Web Developer</p>
+        <div class="heroHeader">
+          <h1 class="heroTitle">Joshua Laforest</h1>
+          <p class="heroSubTitle">Front-End Web Developer</p>
+        </div>
+        <div class="heroContent">
+          <p class="heroParagraph">
+            We want to use a lot pressure while using no pressure at all. This
+            is probably the greatest thing to happen in my life - to be able to
+            share this with you. And that's when it becomes fun - you don't have
+            to spend your time thinking about what's happening - you just let it
+            happen.
+          </p>
+          <button>contact me</button>
+        </div>
       </div>
-      <div class="heroContent">
-        <p class="heroParagraph">
-          We want to use a lot pressure while using no pressure at all. This is probably the greatest thing to happen in my life - to be able to share this with you. And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen.
-        </p>
-        <button>contact me</button>
-      </div>
-    </div>
       <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg" />
     </section>
 
@@ -40,60 +44,65 @@
       <!-- about me -->
       <section class="about-section" id="about">
         <div class="container-sml">
-        <h2>About Me</h2>
-        <p>
-          You can do anything your heart can imagine. The only thing worse than
-          yellow snow is green snow. From all of us here, I want to wish you
-          happy painting and God bless, my friends. So often we avoid running
-          water, and running water is a lot of fun. Let's do it again then, what
-          the heck. Just use the old one inch brush.
-        </p>
-        <br>
-        <p>
-          If you didn't have baby clouds, you wouldn't have big clouds.
-          Automatically, all of these beautiful, beautiful things will happen.
-          It's amazing what you can do with a little love in your heart. We'll
-          do another happy little painting. Don't forget to tell these special
-          people in your life just how special they are to you. The little tiny
-          Tim easels will let you down.
-        </p>
-      </div>
+          <h2>About Me</h2>
+          <p>
+            You can do anything your heart can imagine. The only thing worse
+            than yellow snow is green snow. From all of us here, I want to wish
+            you happy painting and God bless, my friends. So often we avoid
+            running water, and running water is a lot of fun. Let's do it again
+            then, what the heck. Just use the old one inch brush.
+          </p>
+          <br />
+          <p>
+            If you didn't have baby clouds, you wouldn't have big clouds.
+            Automatically, all of these beautiful, beautiful things will happen.
+            It's amazing what you can do with a little love in your heart. We'll
+            do another happy little painting. Don't forget to tell these special
+            people in your life just how special they are to you. The little
+            tiny Tim easels will let you down.
+          </p>
+        </div>
       </section>
 
       <!-- portfolio container -->
       <section class="page-section container-sml" id="work">
         <h2>Work</h2>
         <div class="work-grid">
-          <div class="work-grid-item" id="projectOne">
-            <header>
-              <h3>Jake's Eatery</h3>
-              <p>HTML/CSS</p>
-            </header>
-          </div>
-          <div class="work-grid-item" id="projectTwo">
-            <header>
-              <h3>CSS Snippet Cheatsheet</h3>
-              <p>HTML/CSS</p>
-            </header>
-          </div>
-          <div class="work-grid-item" id="projectThree">
-            <header>
-              <h3>HTML Refactor</h3>
-              <p>HTML/CSS</p>
-            </header>
-          </div>
-          <div class="work-grid-item" id="projectFour">
-            <header>
-              <h3>Something Cool</h3>
-              <p>HTML/CSS</p>
-            </header>
-          </div>
-          <div class="work-grid-item" id="projectFive">
-            <header>
-              <h3>Something Something</h3>
-              <p>HTML/CSS</p>
-            </header>
-          </div>
+            <div class="work-grid-item" id="projectOne">
+              <a href="https://joshlaforest.github.io/jakes-eatery/" target="_blank"></a>
+              <header>
+                <h3>Jake's Eatery</h3>
+                <p>HTML/CSS</p>
+              </header>
+            </div>
+            <div class="work-grid-item" id="projectTwo">
+              <a href=""></a>
+              <header>
+                <h3>CSS Snippet Cheatsheet</h3>
+                <p>HTML/CSS</p>
+              </header>
+            </div>
+            <div class="work-grid-item" id="projectThree">
+              <a href="https://joshlaforest.github.io/HTML-refactor/" target="_blank"></a>
+              <header>
+                <h3>HTML Refactor</h3>
+                <p>HTML/CSS</p>
+              </header>
+            </div>
+            <div class="work-grid-item" id="projectFour">
+              <a href="#"></a>
+              <header>
+                <h3>Something Cool</h3>
+                <p>HTML/CSS</p>
+              </header>
+            </div>
+            <div class="work-grid-item" id="projectFive">
+              <a href="#"></a>
+              <header>
+                <h3>Something Something</h3>
+                <p>HTML/CSS</p>
+              </header>
+            </div>
         </div>
       </section>
 
