edits to hero section

--- a/starter/index.html
+++ b/starter/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <!-- hero banner -->
-    <section class="hero container">
+    <section class="hero container-lg">
       <div>
         <div class="heroHeader">
           <h1 class="heroTitle">Joshua Laforest</h1>
