--- a/starter/index.html
+++ b/starter/index.html
@@ -34,7 +34,7 @@
             to spend your time thinking about what's happening - you just let it
             happen.
           </p>
-          <button>contact me</button>
+          <a href="#" class="btn" role="button">contact me</a>
         </div>
       </div>
       <img src="./images/avatar.jpg" alt="joshua laforest" class="heroImg" />
