styled links and tweaked responsiveness

--- a/starter/index.html
+++ b/starter/index.html
@@ -13,9 +13,9 @@
     <header class="navbar container-lg">
       <p class="brand">Joshua Laforest</p>
       <nav class="navMenu">
-        <a href="#about" class="navLink">about me</a>
-        <a href="#work" class="navLink">work</a>
-        <a href="#contact" class="navLink">contact me</a>
+        <a href="#about" class="link">about me</a>
+        <a href="#work" class="link">work</a>
+        <a href="#contact" class="link">contact me</a>
       </nav>
     </header>
 
@@ -110,11 +110,11 @@
       <section class="page-section contact container" id="contact">
         <h2>Contact Me</h2>
         <div>
-          <a href="">01347685943</a>
-          <a href="">example@example.com</a>
-          <a href="">Github</a>
-          <a href="">Twitter</a>
-          <a href="">Spotify</a>
+          <a href="#" class="link">01347685943</a>
+          <a href="#" class="link">example@example.com</a>
+          <a href="#" class="link">Github</a>
+          <a href="#" class="link">Twitter</a>
+          <a href="#" class="link">Spotify</a>
         </div>
       </section>
     </main>
